added contct form to send message through email, and initiated emailjs npm package to use client-side code to send valid email. Added validation to form with error labels on each input.

--- a/src/Components/ContactContainer/ContactContainer.css
+++ b/src/Components/ContactContainer/ContactContainer.css
@@ -1,7 +1,15 @@
-.about-container {
-        height: 400px;
-        margin-bottom: 0px !important;
+.contact-container {
+        padding-top: 30px;
+        max-width: 90%;
+        height: 550px;
         color: aliceblue;
+        margin-bottom: 0px !important;
+        margin: auto;
+}
+
+.contact-jumbotron {
+        margin-bottom: 0px !important;
+        padding-bottom: 100px !important;
         background: #43C6AC;  /* fallback for old browsers */
         background: -webkit-linear-gradient(to right, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to right, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
