--- a/src/Components/MessageList/MessageList.css
+++ b/src/Components/MessageList/MessageList.css
@@ -1,5 +1,5 @@
 .message {
-        margin: 15px 0;
+        margin: 0px 0;
     }
     
     .message div:nth-child(1) {
@@ -18,7 +18,8 @@
     
     .message-list {
         box-sizing: border-box;
-        padding: 0 0 0 6px;
+        max-height: 200px;
+        padding: 0 0 0 0px;
         margin: 0;
         width: 100%;
         height: 100%;
