--- a/src/Components/ServicesContainer/ServicesContainer.css
+++ b/src/Components/ServicesContainer/ServicesContainer.css
@@ -1,3 +1,12 @@
 .services-container {
-        height: 600px;
+        height: 500px;
+        color: aliceblue;
+        margin-bottom: 0px !important;
+        background: #43C6AC;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.services_card_body {
+        background: transparent !important;
 }
